# mrtrix3_demon_addon

./: .gitignore  CLAUDE.md  Connectome.py  Dockerfile  ImageTypeChecker.py  Output_Overview.docx  README.md  Singularity.def  SlurmBatch.py  bids_discovery.py  collect_connectome_files.sh  commands.json  commands_CLINENHP_ms.json  commands_NHP_ms.json  commands_cs.json  commands_ms.json  commands_qc.json  config.json  create_qc_images.sh  create_qc_jobs.sh  enhanced_commands_bids.json  enhanced_commands_dti.json  enhanced_commands_ms.json  multishell_processing_outline.md  pyproject.toml  requirements.txt  run_pipeline.py  run_pipeline_legacy.py  run_qc_script.sh  test_image_checker.py
docs/: api.md  architecture.md  development.md  index.md  user_guide.md
dwi_pipeline/: __main__.py
dwi_pipeline/application/builders/: workflow_builder.py
dwi_pipeline/application/factories/: strategy_factory.py  (+1 more)
dwi_pipeline/cli/: argument_parser.py
dwi_pipeline/utils/: constants.py
planning_docs/: ARCHITECTURE.md  COMPLETE_SUMMARY.md  EXAMPLE_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.md  REFINED_ARCHITECTURE.md  atlas_parameter_management.puml  class_diagram.puml  cli_interface.py  cli_specification.puml  deployment_diagram.puml  layered_architecture.puml  multi_dimensional_strategy.puml  output_structure.puml  package_structure.puml  sequence_diagram.puml  strategy_pattern.puml  system_architecture.puml  validation_strategy.puml  workflow_graph.puml
scripts/: connectome_aggregator.py  generate_standardized_report.py
templates/: templates.txt
(+44 files in other folders)
