[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrtrix3-demon-addon"
version = "0.1.0"
description = "DWI processing pipeline using MRtrix3"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Richard Barcus"}
]

dependencies = [
    "nibabel>=3.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "networkx>=2.6.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "packaging",
]

[project.urls]
Repository = "https://github.com/MrRichard/mrtrix3_demon_addon"

[tool.setuptools]
py-modules = ["Connectome", "ImageTypeChecker", "SlurmBatch", "run_pipeline", "run_pipeline_legacy"]
