[tool.poetry]
name = "dwi-pipeline"
version = "1.0.0"
description = "MRtrix3 DWI Connectome Pipeline (Container Version)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nipype = "^1.8.6"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.14.0"

[tool.poetry.scripts]
dwi-pipeline = "dwi_pipeline.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"